# ChaseOS-Core

./: .env.example  .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CORE_MANIFEST.md  EXTRACTION_MANIFEST.md  FORKING.md  GOVERNANCE.md  LICENSE.md  NOTICE.md  PROJECT_FOUNDATION.md  README.md  ROADMAP.md  SBOM.md  SBOM.spdx.json  SECURITY.md  SOUL.template.md  THIRD_PARTY_NOTICES.md  TRADEMARKS.md  pyproject.toml  requirements-dev.txt  requirements.txt  test_core_publish_readiness.py
00_HOME/: Dashboard.example.md  Now.example.md  Operating-System.example.md  Principles.example.md  README.md
01_PROJECTS/: Example-Project-OS.md  README.md
02_KNOWLEDGE/: Knowledge-Index.example.md  README.md  Source-Note.example.md  Synthesis-Note.example.md
03_INPUTS/: README.md
04_SOPS/: Agent-Failure-Ambiguity-SOP.md  Build-Log-SOP.md  Credential-Boundaries-SOP.md  Promotion-Session-SOP.md  Research-Ingest-SOP.md  Untrusted-Input-Handling-SOP.md
05_TEMPLATES/: Adapter-Compliance-Checklist.md  Agent-Activity-Log-Template.md  Agent-Audit-Log-Template.md  Agent-Runtime-Profile-Template.md  Agent-Session-Log-Template.md  Daily-Note-Template.md  Decision-Ledger-Entry-Template.md  Decision-Log-Template.md  Experiment-Template.md  Feature-Filter-Template.md  Generated-Idea-Template.md  New-Runtime-Registration-Checklist.md  Operator-Run-Audit-Template.md  Personal-Map-Node-Template.md  Project-OS-Template.md  Source-Note-Template.md  Synthesis-Note-Template.md
06_AGENTS/: Adapter-Manifest-Standard.md  Agent-Bus-Folder-Guide.md  Agent-Control-Plane.md  Agent-Output-Conventions.md  Agent-Registry.md  Agent-Security-Model.md  Autonomous-Operator-Runtime.md  Backends-Supported.md  ChaseOS-Gate.md  Execution-Adapter-Standard.md  Ingestion-Architecture.md  Knowledge-Taxonomy.md  Permission-Matrix.md  Runtime-InterAgent-Coordination-Bus.md  SIC-Architecture.md  Trust-Tiers.md  Vault-Map.md
07_LOGS/: README.md
07_LOGS/Build-Logs/: Build-Logs-Index.example.md
07_LOGS/Daily/: Daily-Index.example.md
99_ARCHIVE/: README.md
99_ARCHIVE/Documentation-History/: Documentation-History-Index.example.md
docs/agents/: Agent-Memory-Architecture-full.md  Agent-Memory-Architecture.md  Browser-Autonomy-Policy.md  Browser-Operator-Policy.md  Cross-Runtime-Handoff.md  Discord-Channel-Registry.example.md  Discord-Command-Envelope-Schema.md  Discord-Control-Plane-Setup-SOP.md  Discord-Control-Plane.md  Discord-Identity-Map.example.md  Handoff-Protocol.md  Session-Closeout-Protocol.md
docs/cli/: CLI-Quickstart.md  Command-Reference.md  (+3 more)
kernel/: PERMISSION_MATRIX.md
runtime/: README.md  gate_interface.py  repo_secret_audit.py
security/: README.md  Security-Audits-Index.example.md
subagents/: README.md
(+442 files in other folders)
